--- a/lib/index.html
+++ b/lib/index.html
@@ -124,7 +124,7 @@
             <li class="list"><a href="https://static.wikia.nocookie.net/valorant/images/7/70/Loading_Screen_Haven.png/revision/latest/smart/width/250/height/250?cb=20200620202335" target="_blank">HAVEN</a></li>
             <li class="list"><a href="https://static.wikia.nocookie.net/valorant/images/5/5c/Loading_Screen_Sunset.png/revision/latest?cb=20230829125442" target="_blank">SUNSET</a></li>
             <li class="list"><a href="https://imageio.forbes.com/specials-images/imageserve/61324d995b3960f60572de2d/A-screenshot-of-Fracture-/960x0.jpg?format=jpg&width=960" target="_blank">FRACTURE</a></li>
-            <li class="list"><a href="Breeze.png" target="_blank">BREEZE</a></li>
+            <li class="list"><a href="/source/Breeze.png" target="_blank">BREEZE</a></li>
             <li class="list"><a href="https://xpulz.com/img/game/valorant/maps/splash_Pearl-650x650.png"   target="_blank">PEARL</a></li>
             <li class="list"><a href="https://xpulz.com/img/game/valorant/maps/splash_Lotus-650x650.png"   target="_blank">LOTUS</a></li>
           </ul>
